--- a/CS162S21GID03/nbproject/private/private.properties
+++ b/CS162S21GID03/nbproject/private/private.properties
@@ -1,2 +1,2 @@
-file.reference.jcalendar-1.4.jar=C:\\Program Files\\Java\\jdk1.8.0_231\\lib\\jcalendar-1.1.4.jar
-user.properties.file=C:\\Users\\Zeeshan\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+file.reference.jcalendar-1.4.jar=C:\\Users\\Hp\\Downloads\\jcalendar-1.4.jar
+user.properties.file=C:\\Users\\Hp\\AppData\\Roaming\\NetBeans\\12.0\\build.properties
